fixed text wrapping on mobile dropdown menus

--- a/style/navbar.css
+++ b/style/navbar.css
@@ -33,6 +33,10 @@
     display: inherit;
   }
 
+  li.dropdown-item {
+    white-space: normal;
+  }
+
   li.dropdown.nav-item {
       height: inherit !important;
       margin: 0 !important;
